added user identification